syntax = "proto3";

package org.brewchain.evmapi.gens;

message SingleTransaction {
	string txHash = 1;
	int32 nonce = 2;
	int32 fee = 3;
	int32 feeLimit = 4;
	string receiveAddress= 5;
	string senderAddress = 6;
	int64 amount= 7;
	string data= 8;
	int64 timestamp = 9;
	string exdata = 10;
	string signature = 11;
	string pubKey = 12;
	repeated string delegate = 13;
	string token = 14;
}

message MultiTransaction {
	string txHash = 1;
	MultiTransactionBody txBody = 2;
	string status = 3;
	MultiTransactionNode txNode = 4;
} 

message MultiTransactionBody {
	repeated MultiTransactionInput inputs = 1;
	repeated MultiTransactionOutput outputs = 2;
	string exdata = 3;
	repeated MultiTransactionSignature signatures = 4;
	repeated string delegate = 5;
	string data = 6;
	int64 timestamp = 7;
	int32 type = 8;
}

message MultiTransactionInput {
	int32 nonce = 1;
	int32 fee = 2;
	int32 feeLimit = 3;
	string address = 4;
	int64 amount= 5;
	string pubKey = 6;
	string token = 7;
	string symbol = 8;
	string cryptoToken = 9;
}

message MultiTransactionOutput {
	string address= 1;
	int64 amount= 2;
	string symbol = 3;
	string cryptoToken = 4;
}

message MultiTransactionSignature {
	string signature = 1;
	string pubKey = 2;
}

message MultiTransactionNode {
	string node = 1;
	string address = 2;
	string bcuid = 3;
}

message BroadcastTransactionMsg {
	repeated string txHexStr = 1;
}